# ASTR_System

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
integrations/astrbot_plugin_astr_bridge/: README.md  main.py  metadata.yaml
scripts/: backup_task.ps1  check_licenses.py  check_soul_purity.py  download_models.ps1  init_soul.py  start_all.ps1  start_llm.ps1  stop_all.ps1  sync_persona_to_st.py  try_voice.py
src/astr/: __init__.py  cli.py
src/astr/adapters/: prompt_boot.py  smoke_boot.py
src/astr/bus/: core.py  demo.py
src/astr/contracts/: adapter.py  events.py  router.py  settings.py  soul.py
src/astr/core/: __init__.py  app.py  worker.py
src/astr/memory/: chunks_loader.py  episodic_writer.py  experience.py  people.py  semantic.py
src/astr/ops/: backup.py  golden_runner.py  ledger.py  soul_validate.py  watchdog.py
src/astr/presentation/: express.py  humanize.py  tts.py
src/astr/router/: core.py  routes.yaml  smoke.py
tests/: test_adapter.py  test_bus.py  test_contracts.py  test_core.py  test_emotion.py  test_engagement.py  test_experience.py  test_express.py  test_fewshot.py  test_golden.py  test_heartbeat.py  test_humanize.py  test_intent.py  test_life.py  test_memory.py  test_people.py  test_platform.py  test_reaction.py  test_router.py  test_smoke.py  test_social.py  test_soul.py  test_voiceprint.py  test_watchdog.py
webapp/: .gitignore  next.config.ts  package-lock.json  package.json
webapp/scripts/: fetch-live2d.mjs
(+40 files in other folders)
